--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -37,7 +37,11 @@
         "statics": {
             "warnMsgEndBeforeStart": "Start date must be before end date.",
             "warnMsgExceedsMaxDuration": "Start date and end date are too far apart.",
-            "msgNotBetweenMinMax": "Date/time are not within a valid range."
+            "msgNotBetweenMinMax": "Date/time are not within a valid range.",
+            "refreshAutomatically": "Refresh automatically",
+            "refreshInterval": "Refresh interval",
+            "minute": "1 minute",
+            "minutes": "{0} minutes"
         }
     },
     "Koala.util.Routing": {
@@ -1242,7 +1246,10 @@
                 "labelStartDate": "Start Date",
                 "labelEndDate": "End Date",
                 "setFilterButtonText": "Apply",
-                "invalidInputErrMsg": "Filter cannot be assigned. Please verify your inputs."
+                "invalidInputErrMsg": "Filter cannot be assigned. Please verify your inputs.",
+                "enableAutorefreshLabel": "Refresh automatically",
+                "dataBelowThresholdButton": "Show data below threshold",
+                "refreshInterval": "Refresh interval"
             }
         }
     },
