add bar chart config in mobile view

--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -1181,6 +1181,15 @@
             }
         }
     },
+    "Koala.view.form.BarChartFilterControl": {
+        "config": {
+            "data": {
+                "setFilterButtonText": "Apply",
+                "toggleUncertaintyLabel": "Toggle uncertainty",
+                "toggleGroupingLabel": "Toggle grouping"
+            }
+        }
+    },
     "BasiGX.view.form.Print": {
         "config": {
             "data": {
