--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -1310,6 +1310,15 @@
             }
         }
     },
+    "Koala.view.form.BarChartFilterControl": {
+        "config": {
+            "data": {
+                "setFilterButtonText": "Anwenden",
+                "toggleUncertaintyLabel": "Messungenauigkeit umschalten",
+                "toggleGroupingLabel": "Gruppierung tauschen"
+            }
+        }
+    },
     "BasiGX.view.form.Print": {
         "config": {
             "data": {
