Add checkbox to toggle serialization of layer filters in permalink (and some minor refactoring)

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -1481,7 +1481,8 @@
         "config": {
             "data": {
                 "refreshBtnText": "Erneuern",
-                "copyToClipboardBtnText": "In Zwischenablage kopieren"
+                "copyToClipboardBtnText": "In Zwischenablage kopieren",
+                "applyFilterCheckboxBoxLabel": "Layerfilter in Permalink übernehmen"
             }
         }
     },
