--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -108,6 +108,7 @@
                 "toggleLegendVisibility": "Legendensichtbarkeit umstellen",
                 "exportToPngText": "Download Chart",
                 "toggleGrouping": "Gruppierung tauschen",
+                "toggleScale": "Y-Achsenskalierung tauschen",
                 "toggleUncertainty": "Messungenauigkeit umschalten",
                 "displayIdentificationThreshold": "Daten < NWG anzeigen",
                 "irixPrintText": "DokPool",
@@ -562,6 +563,7 @@
                 "removeSeriesQuestionTpl": "Serie '{0}' entfernen?",
                 "startLabel": "Start",
                 "toggleDataBelowIdentificationThreshold": "Daten < NWG anzeigen",
+                "toggleScaleBtnText": "Skalierung tauschen",
                 "endLabel": "Ende"
             }
         }
