Add checkbox to toggle serialization of layer filters in permalink

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -1429,7 +1429,8 @@
     "Koala.view.panel.MobilePermalink": {
         "config": {
             "data": {
-                "title": "Permalink"
+                "title": "Permalink",
+                "applyFilterCheckboxBoxLabel": "Layerfilter in Permalink übernehmen"
             }
         }
     },
