--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -1389,7 +1389,8 @@
                 "invalidInputErrMsg": "Filter kann nicht übernommen werden. Bitte überprüfen Sie Ihre Eingaben.",
                 "enableAutorefreshLabel": "Automatisch aktualisieren",
                 "dataBelowThresholdButton": "Daten kleiner NWG anzeigen",
-                "refreshInterval": "Aktualisierungsintervall"
+                "refreshInterval": "Aktualisierungsintervall",
+                "toggleScaleButton": "Skalierung tauschen"
             }
         }
     },
