harmonized FiltersText for daterange filters

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -15,7 +15,7 @@
     },
     "Koala.util.Layer": {
         "statics": {
-            "txtUntil": "bis",
+            "txtUntil": "-",
             "titleAddLayer": "Layer",
             "titleAddLayerFilter": "Layerfilter",
             "textUnknownLayer": "Unbekannt",
