--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -15,7 +15,7 @@
     },
     "Koala.util.Layer": {
         "statics": {
-            "txtUntil": "until",
+            "txtUntil": "-",
             "titleAddLayer": "Layer",
             "titleAddLayerFilter": "Layer-Filter",
             "textUnknownLayer": "unknown",
