--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -118,14 +118,21 @@
                 "maxExtent": "Diagrammansicht maximieren",
                 "combineSeries": "Zeitreihen zusammenführen",
                 "toggleLegendVisibility": "Legendensichtbarkeit umstellen",
-                "exportToPngText": "Download Chart",
+                "exportToPngText": "Download Grafik",
                 "toggleGrouping": "Gruppierung tauschen",
                 "toggleScale": "Y-Achsenskalierung tauschen",
                 "toggleUncertainty": "Messungenauigkeit umschalten",
                 "displayIdentificationThreshold": "Daten < NWG anzeigen",
                 "irixPrintText": "DokPool",
                 "irixPrintTooltip": "exportieren des Charts nach DokPool",
-                "axisText": "Achse"
+                "axisText": "Achse",
+                "downloadAllChartDataMsgTitle": "Alle Daten herunterladen?",
+                "downloadChartDataTooltip": "Download Daten",
+                "downloadFilenameText": "Dateiname",
+                "outputFormatText": "Format",
+                "delimiterText": "Trennzeichen",
+                "downloadAllChartDataMsgButtonYes": "Herunterladen",
+                "downloadAllChartDataMsgButtonNo": "Abbrechen",
             }
         }
     },
