enable double quotes

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -126,11 +126,13 @@
                 "irixPrintText": "DokPool",
                 "irixPrintTooltip": "exportieren des Charts nach DokPool",
                 "axisText": "Achse",
-                "downloadAllChartDataMsgTitle": "Alle Daten herunterladen?",
+                "downloadAllChartDataMsgTitle": "Daten herunterladen",
                 "downloadChartDataTooltip": "Download Daten",
                 "downloadFilenameText": "Dateiname",
+                "filenameNotValidText": "Mindestens 3 Zeichen, Leerzeichen sind nicht erlaubt!",
                 "outputFormatText": "Format",
                 "delimiterText": "Trennzeichen",
+                "quoteText": "Anführungszeichen (\" \") verwenden",
                 "downloadAllChartDataMsgButtonYes": "Herunterladen",
                 "downloadAllChartDataMsgButtonNo": "Abbrechen",
             }
