--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -126,11 +126,13 @@
                 "irixPrintText": "DokPool",
                 "irixPrintTooltip": "export chart into DokPool",
                 "axisText": "Axis",
-                "downloadAllChartDataMsgTitle": "Download all chart data?",
+                "downloadAllChartDataMsgTitle": "Download chart data",
                 "downloadChartDataTooltip": "Download data",
                 "downloadFilenameText": "Filename",
+                "filenameNotValidText": "Minimum 3 letters. Whitespaces are not allowed!",
                 "outputFormatText": "Format",
                 "delimiterText": "Delimiter",
+                "quoteText": "use double quotes (\" \")",
                 "downloadAllChartDataMsgButtonYes": "Download",
                 "downloadAllChartDataMsgButtonNo": "Cancel",
             }
