--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -129,7 +129,8 @@
                 "downloadAllChartDataMsgTitle": "Daten herunterladen",
                 "downloadChartDataTooltip": "Download Daten",
                 "downloadFilenameText": "Dateiname",
-                "filenameNotValidText": "Mindestens 3 Zeichen, Leerzeichen sind nicht erlaubt!",
+                "filenameNotValidText": "Leerzeichen sind nicht erlaubt!",
+                "MsgNoValidFilenameText": "Bitte einen gültigen Dateinamen eingeben",
                 "outputFormatText": "Format",
                 "delimiterText": "Trennzeichen",
                 "quoteText": "Anführungszeichen (\" \") verwenden",
