--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -129,7 +129,8 @@
                 "downloadAllChartDataMsgTitle": "Download chart data",
                 "downloadChartDataTooltip": "Download data",
                 "downloadFilenameText": "Filename",
-                "filenameNotValidText": "Minimum 3 letters. Whitespaces are not allowed!",
+                "filenameNotValidText": "Whitespaces are not allowed!",
+                "MsgNoValidFilenameText": "Bitte einen gültigen Dateinamen eingeben",
                 "outputFormatText": "Format",
                 "delimiterText": "Delimiter",
                 "quoteText": "use double quotes (\" \")",
