add remove link button to html editor

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -352,7 +352,8 @@
                 "updateLegendtext": "Legendentext",
                 "labelUse": "…verwenden?",
                 "northArrow": "Nordpfeil",
-                "scalebar": "Massstabsleiste"
+                "scalebar": "Massstabsleiste",
+                "unlinkTooltip": "Link entfernen"
             },
         }
     },
