--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -351,7 +351,8 @@
                 "updateLegendtext": "en:Legendtext",
                 "labelUse": "…use?",
                 "northArrow": "North arrow",
-                "scalebar": "Scale bar"
+                "scalebar": "Scale bar",
+                "unlinkTooltip": "Remove link"
             }
         }
     },
